k8s/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
